2011-04-25 Javier Lanz <javier.lanz@artica.es>

	* operation/agentes/tactical.php: Fixed a style problem on Internet
	Explorer

	Fix: #3279238

2011-04-20 Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb_data.sql, pandoradb.data.postgreSQL.sql,
	pandoradb.data.oracle.sql: added the default value for flash_chart for
	admin user. The value is "use the global conf".
	
	* include/db/mysql.php: cleaned source code style.
	
	* godmode/users/configure_user.php: fixed when update or create the user
	in Pandora Console without Enterprise version installed.

2011-04-23  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alert_macros.php: Added the new _policy_ alert
	  macro.

2011-04-20 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_graph.php,
	include/graphs/functions_pchart.php: some fixes, and set font size equal
	for all text in graphs. And starte the change to vertical bar the graph
	for string module.

	* include/functions_reporting.php: added to take the font and size.

2011-04-20  Ramon Novoa  <rnovoa@artica.es>

	* include/help/en/help_alert_macros.php,
	  include/help/es/help_alert_macros.php: Added the new _policy_ alert
	  macro.

2011-04-20 Miguel de Dios  <miguel.dedios@artica.es>

	* include/fonts/unicode.ttf: renamed form code.ttf.
	
	* include/fonts/smallfont.ttf: added new smaller font.
	
	* include/functions_config.php, godmode/setup/setup_visuals.php: now you
	can set the size of font for the graphs.
	
	* include/functions_graph.php, include/graphs/functions_pchart.php,
	include/graphs/fgraph.php: changed source code to set the size of font
	in the graphs.

2011-04-20 Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/graphs/functions_pchart.php,
	include/fgraph.php, operation/agentes/stat_win.php: fixed duplicate
	functions, and start to support custom font in Pandora connector.

	* index.php: fixed when include again the extension file.
	